src/exec/dpexec/y.output
   0  $accept : start $end

   1  $$1 :

   2  start : $$1 top

   3  top : statement
   4      | macro
   5      | packet
   6      | vcr
   7      | K_INCLUDE T_STRING
   8      | K_INCLUDE T_ID
   9      | K_QUIT
  10      | T_EOF
  11      | T_EOL
  12      | semicolon

  13  vcr : K_VCR statement
  14      | K_PAUSE semicolon
  15      | K_PLAY semicolon
  16      | K_STEP semicolon
  17      | K_STOP semicolon
  18      | K_FORWARD semicolon
  19      | K_BACKWARD semicolon
  20      | K_PALINDROME switch semicolon
  21      | K_LOOP switch semicolon

  22  switch : K_ON
  23         | K_OFF

  24  $$2 :

  25  packet : T_BAR int T_BAR P_INTERRUPT T_BAR int $$2 T_BAR interrupt_data T_BAR

  26  $$3 :

  27  packet : T_BAR int T_BAR P_SYSTEM T_BAR int $$3 T_BAR system_data T_BAR

  28  $$4 :

  29  packet : T_BAR int T_BAR P_ACK T_BAR int $$4 T_BAR ack_data T_BAR

  30  $$5 :

  31  packet : T_BAR int T_BAR P_MACRO T_BAR int $$5 T_BAR macro_data T_BAR

  32  $$6 :

  33  packet : T_BAR int T_BAR P_FOREGROUND T_BAR int $$6 T_BAR foreground_data T_BAR

  34  $$7 :

  35  packet : T_BAR int T_BAR P_BACKGROUND T_BAR int $$7 T_BAR background_data T_BAR

  36  $$8 :

  37  packet : T_BAR int T_BAR P_ERROR T_BAR int $$8 T_BAR error_data T_BAR

  38  $$9 :

  39  packet : T_BAR int T_BAR P_MESSAGE T_BAR int $$9 T_BAR message_data T_BAR

  40  $$10 :

  41  packet : T_BAR int T_BAR P_INFO T_BAR int $$10 T_BAR info_data T_BAR

  42  $$11 :

  43  packet : T_BAR int T_BAR P_LINQ T_BAR int $$11 T_BAR l_inquiry_data T_BAR

  44  $$12 :

  45  packet : T_BAR int T_BAR P_SINQ T_BAR int $$12 T_BAR s_inquiry_data T_BAR

  46  $$13 :

  47  packet : T_BAR int T_BAR P_VINQ T_BAR int $$13 T_BAR v_inquiry_data T_BAR

  48  $$14 :

  49  packet : T_BAR int T_BAR P_LRESP T_BAR int $$14 T_BAR l_response_data T_BAR

  50  $$15 :

  51  packet : T_BAR int T_BAR P_SRESP T_BAR int $$15 T_BAR s_response_data T_BAR

  52  $$16 :

  53  packet : T_BAR int T_BAR P_VRESP T_BAR int $$16 T_BAR v_response_data T_BAR

  54  $$17 :

  55  packet : T_BAR int T_BAR P_DATA T_BAR int $$17 T_BAR data_data T_BAR

  56  $$18 :

  57  packet : T_BAR int T_BAR P_IMPORT T_BAR int $$18 T_BAR import_data T_BAR

  58  interrupt_data : int

  59  system_data : system_s

  60  system_s : system
  61           | system_s T_COMMA system

  62  system : id T_ASSIGN constant

  63  ack_data : message_id T_COLON data

  64  macro_data : macro

  65  foreground_data : statement
  66                  | vcr

  67  background_data : statement
  68                  | K_CANCEL

  69  message_data : data

  70  info_data : data

  71  l_inquiry_data : handle T_COLON ex_id_s

  72  s_inquiry_data : handle T_COLON expression_s
  73                 | handle T_COLON ex_id_s

  74  v_inquiry_data : handle T_COLON expression_s
  75                 | handle T_COLON ex_id_s

  76  l_response_data : handle T_COLON id_s0

  77  s_response_data : handle T_COLON data

  78  v_response_data : handle T_COLON s_assignment_0

  79  data_data : handle T_COLON s_assignment_0

  80  import_data : data

  81  macro : K_MACRO id T_LPAR formal_s0 rightparen T_RA T_LPAR id_s0 rightparen attributes_0 block
  82        | K_MACRO id T_LPAR formal_s0 rightparen attributes_0 block

  83  formal_s0 : empty
  84            | formal_s

  85  formal_s : formal attributes_0
  86           | formal_s T_COMMA formal attributes_0

  87  formal : id
  88         | id T_ASSIGN constant
  89         | id T_ASSIGN A_MINUS constant

  90  block : T_LBRA statement_s0 rightbracket

  91  statement_s0 : empty
  92               | statement_s

  93  statement_s : statement
  94              | statement_s statement

  95  statement : block
  96            | assignment semicolon
  97            | function_call semicolon

  98  assignment : f_assignment
  99             | s_assignment

 100  f_assignment : id_s T_ASSIGN function_call

 101  s_assignment : id_s T_ASSIGN expression_s
 102               | id T_PP
 103               | id T_MM

 104  s_assignment_0 : empty
 105                 | s_assignment

 106  attributes_0 : empty
 107               | attributes

 108  attributes : T_LSQB attribute_s0 T_RSQB

 109  attribute_s0 : empty
 110               | attribute_s

 111  attribute_s : attribute
 112              | attribute_s T_COMMA attribute

 113  attribute : id T_COLON constant

 114  function_call : id T_LPAR argument_s0 rightparen attributes_0

 115  argument_s0 : empty
 116              | argument_s

 117  argument_s : argument
 118             | argument_s T_COMMA argument

 119  argument : value
 120           | id T_ASSIGN value

 121  value : expression

 122  expression_s : expression
 123               | expression_s T_COMMA expression

 124  expression : constant
 125             | id
 126             | T_LPAR expression rightparen
 127             | arithmetic

 128  arithmetic : expression A_EXP expression
 129             | expression A_TIMES expression
 130             | expression A_DIV expression
 131             | expression A_IDIV expression
 132             | expression A_MOD expression
 133             | expression A_PLUS expression
 134             | expression A_MINUS expression
 135             | A_MINUS expression

 136  constant : scalar
 137           | tensor
 138           | list
 139           | string

 140  list : T_LBRA scalar_s rightbracket
 141       | T_LBRA tensor_s rightbracket
 142       | T_LBRA string_s rightbracket
 143       | T_LBRA nreal T_DOTDOT nreal rightbracket
 144       | T_LBRA nreal T_DOTDOT nreal T_COLON nreal rightbracket

 145  tensor_s : tensor
 146           | tensor_s tensor
 147           | A_MINUS tensor
 148           | tensor_s A_MINUS tensor
 149           | tensor_s T_COMMA tensor
 150           | tensor_s T_COMMA A_MINUS tensor

 151  tensor : T_LSQB scalar_s T_RSQB
 152         | T_LSQB tensor_s T_RSQB

 153  scalar_s : scalar
 154           | scalar_s scalar
 155           | A_MINUS scalar
 156           | scalar_s A_MINUS scalar
 157           | scalar_s T_COMMA scalar
 158           | scalar_s T_COMMA A_MINUS scalar

 159  string_s : string
 160           | string_s string
 161           | string_s T_COMMA string

 162  scalar : real
 163         | complex
 164         | quaternion

 165  nreal : real
 166        | A_MINUS real

 167  real : int
 168       | float

 169  complex : T_LPAR nint T_COMMA nint rightparen
 170          | T_LPAR nint T_COMMA nfloat rightparen
 171          | T_LPAR nfloat T_COMMA nint rightparen
 172          | T_LPAR nfloat T_COMMA nfloat rightparen

 173  quaternion : T_LPAR nint T_COMMA nint T_COMMA nint T_COMMA nint rightparen
 174             | T_LPAR nfloat T_COMMA nfloat T_COMMA nfloat T_COMMA nfloat rightparen

 175  nint : int
 176       | A_MINUS int

 177  int : T_INT

 178  nfloat : float
 179         | A_MINUS float

 180  float : T_FLOAT

 181  string : T_STRING

 182  semicolon : T_SEMI

 183  rightparen : T_RPAR

 184  rightbracket : T_RBRA

 185  id : T_ID

 186  ex_id : T_EXID

 187  empty :

 188  id_s0 : empty
 189        | id_s

 190  id_s : id attributes_0
 191       | id_s T_COMMA id attributes_0

 192  ex_id_s : ex_id
 193          | ex_id_s T_COMMA ex_id

 194  message_id : int

 195  handle : int

 196  error_data :

 197  data :

state 0
	$accept : . start $end  (0)
	$$1 : .  (1)

	.  reduce 1

	start  goto 1
	$$1  goto 2


state 1
	$accept : start . $end  (0)

	$end  accept


state 2
	start : $$1 . top  (2)

	T_EOF  shift 3
	T_EOL  shift 4
	T_BAR  shift 5
	T_LBRA  shift 6
	T_SEMI  shift 7
	K_INCLUDE  shift 8
	K_MACRO  shift 9
	K_QUIT  shift 10
	K_BACKWARD  shift 11
	K_FORWARD  shift 12
	K_LOOP  shift 13
	K_PALINDROME  shift 14
	K_PAUSE  shift 15
	K_PLAY  shift 16
	K_STEP  shift 17
	K_STOP  shift 18
	K_VCR  shift 19
	T_ID  shift 20
	.  error

	assignment  goto 21
	block  goto 22
	f_assignment  goto 23
	function_call  goto 24
	id  goto 25
	id_s  goto 26
	macro  goto 27
	packet  goto 28
	s_assignment  goto 29
	statement  goto 30
	top  goto 31
	vcr  goto 32
	semicolon  goto 33


state 3
	top : T_EOF .  (10)

	.  reduce 10


state 4
	top : T_EOL .  (11)

	.  reduce 11


state 5
	packet : T_BAR . int T_BAR P_INTERRUPT T_BAR int $$2 T_BAR interrupt_data T_BAR  (25)
	packet : T_BAR . int T_BAR P_SYSTEM T_BAR int $$3 T_BAR system_data T_BAR  (27)
	packet : T_BAR . int T_BAR P_ACK T_BAR int $$4 T_BAR ack_data T_BAR  (29)
	packet : T_BAR . int T_BAR P_MACRO T_BAR int $$5 T_BAR macro_data T_BAR  (31)
	packet : T_BAR . int T_BAR P_FOREGROUND T_BAR int $$6 T_BAR foreground_data T_BAR  (33)
	packet : T_BAR . int T_BAR P_BACKGROUND T_BAR int $$7 T_BAR background_data T_BAR  (35)
	packet : T_BAR . int T_BAR P_ERROR T_BAR int $$8 T_BAR error_data T_BAR  (37)
	packet : T_BAR . int T_BAR P_MESSAGE T_BAR int $$9 T_BAR message_data T_BAR  (39)
	packet : T_BAR . int T_BAR P_INFO T_BAR int $$10 T_BAR info_data T_BAR  (41)
	packet : T_BAR . int T_BAR P_LINQ T_BAR int $$11 T_BAR l_inquiry_data T_BAR  (43)
	packet : T_BAR . int T_BAR P_SINQ T_BAR int $$12 T_BAR s_inquiry_data T_BAR  (45)
	packet : T_BAR . int T_BAR P_VINQ T_BAR int $$13 T_BAR v_inquiry_data T_BAR  (47)
	packet : T_BAR . int T_BAR P_LRESP T_BAR int $$14 T_BAR l_response_data T_BAR  (49)
	packet : T_BAR . int T_BAR P_SRESP T_BAR int $$15 T_BAR s_response_data T_BAR  (51)
	packet : T_BAR . int T_BAR P_VRESP T_BAR int $$16 T_BAR v_response_data T_BAR  (53)
	packet : T_BAR . int T_BAR P_DATA T_BAR int $$17 T_BAR data_data T_BAR  (55)
	packet : T_BAR . int T_BAR P_IMPORT T_BAR int $$18 T_BAR import_data T_BAR  (57)

	T_INT  shift 34
	.  error

	int  goto 35


state 6
	block : T_LBRA . statement_s0 rightbracket  (90)
	empty : .  (187)

	T_LBRA  shift 6
	T_ID  shift 20
	T_RBRA  reduce 187

	assignment  goto 21
	block  goto 22
	empty  goto 36
	f_assignment  goto 23
	function_call  goto 24
	id  goto 25
	id_s  goto 26
	s_assignment  goto 29
	statement  goto 37
	statement_s  goto 38
	statement_s0  goto 39


state 7
	semicolon : T_SEMI .  (182)

	.  reduce 182


state 8
	top : K_INCLUDE . T_STRING  (7)
	top : K_INCLUDE . T_ID  (8)

	T_STRING  shift 40
	T_ID  shift 41
	.  error


state 9
	macro : K_MACRO . id T_LPAR formal_s0 rightparen T_RA T_LPAR id_s0 rightparen attributes_0 block  (81)
	macro : K_MACRO . id T_LPAR formal_s0 rightparen attributes_0 block  (82)

	T_ID  shift 20
	.  error

	id  goto 42


state 10
	top : K_QUIT .  (9)

	.  reduce 9


state 11
	vcr : K_BACKWARD . semicolon  (19)

	T_SEMI  shift 7
	.  error

	semicolon  goto 43


state 12
	vcr : K_FORWARD . semicolon  (18)

	T_SEMI  shift 7
	.  error

	semicolon  goto 44


state 13
	vcr : K_LOOP . switch semicolon  (21)

	K_OFF  shift 45
	K_ON  shift 46
	.  error

	switch  goto 47


state 14
	vcr : K_PALINDROME . switch semicolon  (20)

	K_OFF  shift 45
	K_ON  shift 46
	.  error

	switch  goto 48


state 15
	vcr : K_PAUSE . semicolon  (14)

	T_SEMI  shift 7
	.  error

	semicolon  goto 49


state 16
	vcr : K_PLAY . semicolon  (15)

	T_SEMI  shift 7
	.  error

	semicolon  goto 50


state 17
	vcr : K_STEP . semicolon  (16)

	T_SEMI  shift 7
	.  error

	semicolon  goto 51


state 18
	vcr : K_STOP . semicolon  (17)

	T_SEMI  shift 7
	.  error

	semicolon  goto 52


state 19
	vcr : K_VCR . statement  (13)

	T_LBRA  shift 6
	T_ID  shift 20
	.  error

	assignment  goto 21
	block  goto 22
	f_assignment  goto 23
	function_call  goto 24
	id  goto 25
	id_s  goto 26
	s_assignment  goto 29
	statement  goto 53


state 20
	id : T_ID .  (185)

	.  reduce 185


state 21
	statement : assignment . semicolon  (96)

	T_SEMI  shift 7
	.  error

	semicolon  goto 54


state 22
	statement : block .  (95)

	.  reduce 95


state 23
	assignment : f_assignment .  (98)

	.  reduce 98


state 24
	statement : function_call . semicolon  (97)

	T_SEMI  shift 7
	.  error

	semicolon  goto 55


state 25
	s_assignment : id . T_PP  (102)
	s_assignment : id . T_MM  (103)
	function_call : id . T_LPAR argument_s0 rightparen attributes_0  (114)
	id_s : id . attributes_0  (190)
	empty : .  (187)

	T_LPAR  shift 56
	T_LSQB  shift 57
	T_PP  shift 58
	T_MM  shift 59
	T_ASSIGN  reduce 187
	T_COMMA  reduce 187

	attributes  goto 60
	attributes_0  goto 61
	empty  goto 62


state 26
	f_assignment : id_s . T_ASSIGN function_call  (100)
	s_assignment : id_s . T_ASSIGN expression_s  (101)
	id_s : id_s . T_COMMA id attributes_0  (191)

	T_ASSIGN  shift 63
	T_COMMA  shift 64
	.  error


state 27
	top : macro .  (4)

	.  reduce 4


state 28
	top : packet .  (5)

	.  reduce 5


state 29
	assignment : s_assignment .  (99)

	.  reduce 99


state 30
	top : statement .  (3)

	.  reduce 3


state 31
	start : $$1 top .  (2)

	.  reduce 2


state 32
	top : vcr .  (6)

	.  reduce 6


state 33
	top : semicolon .  (12)

	.  reduce 12


state 34
	int : T_INT .  (177)

	.  reduce 177


state 35
	packet : T_BAR int . T_BAR P_INTERRUPT T_BAR int $$2 T_BAR interrupt_data T_BAR  (25)
	packet : T_BAR int . T_BAR P_SYSTEM T_BAR int $$3 T_BAR system_data T_BAR  (27)
	packet : T_BAR int . T_BAR P_ACK T_BAR int $$4 T_BAR ack_data T_BAR  (29)
	packet : T_BAR int . T_BAR P_MACRO T_BAR int $$5 T_BAR macro_data T_BAR  (31)
	packet : T_BAR int . T_BAR P_FOREGROUND T_BAR int $$6 T_BAR foreground_data T_BAR  (33)
	packet : T_BAR int . T_BAR P_BACKGROUND T_BAR int $$7 T_BAR background_data T_BAR  (35)
	packet : T_BAR int . T_BAR P_ERROR T_BAR int $$8 T_BAR error_data T_BAR  (37)
	packet : T_BAR int . T_BAR P_MESSAGE T_BAR int $$9 T_BAR message_data T_BAR  (39)
	packet : T_BAR int . T_BAR P_INFO T_BAR int $$10 T_BAR info_data T_BAR  (41)
	packet : T_BAR int . T_BAR P_LINQ T_BAR int $$11 T_BAR l_inquiry_data T_BAR  (43)
	packet : T_BAR int . T_BAR P_SINQ T_BAR int $$12 T_BAR s_inquiry_data T_BAR  (45)
	packet : T_BAR int . T_BAR P_VINQ T_BAR int $$13 T_BAR v_inquiry_data T_BAR  (47)
	packet : T_BAR int . T_BAR P_LRESP T_BAR int $$14 T_BAR l_response_data T_BAR  (49)
	packet : T_BAR int . T_BAR P_SRESP T_BAR int $$15 T_BAR s_response_data T_BAR  (51)
	packet : T_BAR int . T_BAR P_VRESP T_BAR int $$16 T_BAR v_response_data T_BAR  (53)
	packet : T_BAR int . T_BAR P_DATA T_BAR int $$17 T_BAR data_data T_BAR  (55)
	packet : T_BAR int . T_BAR P_IMPORT T_BAR int $$18 T_BAR import_data T_BAR  (57)

	T_BAR  shift 65
	.  error


state 36
	statement_s0 : empty .  (91)

	.  reduce 91


state 37
	statement_s : statement .  (93)

	.  reduce 93


state 38
	statement_s0 : statement_s .  (92)
	statement_s : statement_s . statement  (94)

	T_LBRA  shift 6
	T_ID  shift 20
	T_RBRA  reduce 92

	assignment  goto 21
	block  goto 22
	f_assignment  goto 23
	function_call  goto 24
	id  goto 25
	id_s  goto 26
	s_assignment  goto 29
	statement  goto 66


state 39
	block : T_LBRA statement_s0 . rightbracket  (90)

	T_RBRA  shift 67
	.  error

	rightbracket  goto 68


state 40
	top : K_INCLUDE T_STRING .  (7)

	.  reduce 7


state 41
	top : K_INCLUDE T_ID .  (8)

	.  reduce 8


state 42
	macro : K_MACRO id . T_LPAR formal_s0 rightparen T_RA T_LPAR id_s0 rightparen attributes_0 block  (81)
	macro : K_MACRO id . T_LPAR formal_s0 rightparen attributes_0 block  (82)

	T_LPAR  shift 69
	.  error


state 43
	vcr : K_BACKWARD semicolon .  (19)

	.  reduce 19


state 44
	vcr : K_FORWARD semicolon .  (18)

	.  reduce 18


state 45
	switch : K_OFF .  (23)

	.  reduce 23


state 46
	switch : K_ON .  (22)

	.  reduce 22


state 47
	vcr : K_LOOP switch . semicolon  (21)

	T_SEMI  shift 7
	.  error

	semicolon  goto 70


state 48
	vcr : K_PALINDROME switch . semicolon  (20)

	T_SEMI  shift 7
	.  error

	semicolon  goto 71


state 49
	vcr : K_PAUSE semicolon .  (14)

	.  reduce 14


state 50
	vcr : K_PLAY semicolon .  (15)

	.  reduce 15


state 51
	vcr : K_STEP semicolon .  (16)

	.  reduce 16


state 52
	vcr : K_STOP semicolon .  (17)

	.  reduce 17


state 53
	vcr : K_VCR statement .  (13)

	.  reduce 13


state 54
	statement : assignment semicolon .  (96)

	.  reduce 96


state 55
	statement : function_call semicolon .  (97)

	.  reduce 97


state 56
	function_call : id T_LPAR . argument_s0 rightparen attributes_0  (114)
	empty : .  (187)

	A_MINUS  shift 72
	T_LPAR  shift 73
	T_LBRA  shift 74
	T_LSQB  shift 75
	T_INT  shift 34
	T_FLOAT  shift 76
	T_STRING  shift 77
	T_ID  shift 20
	T_RPAR  reduce 187

	argument  goto 78
	argument_s  goto 79
	argument_s0  goto 80
	arithmetic  goto 81
	complex  goto 82
	constant  goto 83
	empty  goto 84
	expression  goto 85
	float  goto 86
	id  goto 87
	int  goto 88
	list  goto 89
	quaternion  goto 90
	real  goto 91
	scalar  goto 92
	string  goto 93
	tensor  goto 94
	value  goto 95


state 57
	attributes : T_LSQB . attribute_s0 T_RSQB  (108)
	empty : .  (187)

	T_ID  shift 20
	T_RSQB  reduce 187

	attribute  goto 96
	attribute_s  goto 97
	attribute_s0  goto 98
	empty  goto 99
	id  goto 100


state 58
	s_assignment : id T_PP .  (102)

	.  reduce 102


state 59
	s_assignment : id T_MM .  (103)

	.  reduce 103


state 60
	attributes_0 : attributes .  (107)

	.  reduce 107


state 61
	id_s : id attributes_0 .  (190)

	.  reduce 190


state 62
	attributes_0 : empty .  (106)

	.  reduce 106


state 63
	f_assignment : id_s T_ASSIGN . function_call  (100)
	s_assignment : id_s T_ASSIGN . expression_s  (101)

	A_MINUS  shift 72
	T_LPAR  shift 73
	T_LBRA  shift 74
	T_LSQB  shift 75
	T_INT  shift 34
	T_FLOAT  shift 76
	T_STRING  shift 77
	T_ID  shift 20
	.  error

	arithmetic  goto 81
	complex  goto 82
	constant  goto 83
	expression  goto 101
	expression_s  goto 102
	float  goto 86
	function_call  goto 103
	id  goto 104
	int  goto 88
	list  goto 89
	quaternion  goto 90
	real  goto 91
	scalar  goto 92
	string  goto 93
	tensor  goto 94


state 64
	id_s : id_s T_COMMA . id attributes_0  (191)

	T_ID  shift 20
	.  error

	id  goto 105


state 65
	packet : T_BAR int T_BAR . P_INTERRUPT T_BAR int $$2 T_BAR interrupt_data T_BAR  (25)
	packet : T_BAR int T_BAR . P_SYSTEM T_BAR int $$3 T_BAR system_data T_BAR  (27)
	packet : T_BAR int T_BAR . P_ACK T_BAR int $$4 T_BAR ack_data T_BAR  (29)
	packet : T_BAR int T_BAR . P_MACRO T_BAR int $$5 T_BAR macro_data T_BAR  (31)
	packet : T_BAR int T_BAR . P_FOREGROUND T_BAR int $$6 T_BAR foreground_data T_BAR  (33)
	packet : T_BAR int T_BAR . P_BACKGROUND T_BAR int $$7 T_BAR background_data T_BAR  (35)
	packet : T_BAR int T_BAR . P_ERROR T_BAR int $$8 T_BAR error_data T_BAR  (37)
	packet : T_BAR int T_BAR . P_MESSAGE T_BAR int $$9 T_BAR message_data T_BAR  (39)
	packet : T_BAR int T_BAR . P_INFO T_BAR int $$10 T_BAR info_data T_BAR  (41)
	packet : T_BAR int T_BAR . P_LINQ T_BAR int $$11 T_BAR l_inquiry_data T_BAR  (43)
	packet : T_BAR int T_BAR . P_SINQ T_BAR int $$12 T_BAR s_inquiry_data T_BAR  (45)
	packet : T_BAR int T_BAR . P_VINQ T_BAR int $$13 T_BAR v_inquiry_data T_BAR  (47)
	packet : T_BAR int T_BAR . P_LRESP T_BAR int $$14 T_BAR l_response_data T_BAR  (49)
	packet : T_BAR int T_BAR . P_SRESP T_BAR int $$15 T_BAR s_response_data T_BAR  (51)
	packet : T_BAR int T_BAR . P_VRESP T_BAR int $$16 T_BAR v_response_data T_BAR  (53)
	packet : T_BAR int T_BAR . P_DATA T_BAR int $$17 T_BAR data_data T_BAR  (55)
	packet : T_BAR int T_BAR . P_IMPORT T_BAR int $$18 T_BAR import_data T_BAR  (57)

	P_INTERRUPT  shift 106
	P_SYSTEM  shift 107
	P_ACK  shift 108
	P_MACRO  shift 109
	P_FOREGROUND  shift 110
	P_BACKGROUND  shift 111
	P_ERROR  shift 112
	P_MESSAGE  shift 113
	P_INFO  shift 114
	P_LINQ  shift 115
	P_SINQ  shift 116
	P_VINQ  shift 117
	P_LRESP  shift 118
	P_SRESP  shift 119
	P_VRESP  shift 120
	P_DATA  shift 121
	P_IMPORT  shift 122
	.  error


state 66
	statement_s : statement_s statement .  (94)

	.  reduce 94


state 67
	rightbracket : T_RBRA .  (184)

	.  reduce 184


state 68
	block : T_LBRA statement_s0 rightbracket .  (90)

	.  reduce 90


state 69
	macro : K_MACRO id T_LPAR . formal_s0 rightparen T_RA T_LPAR id_s0 rightparen attributes_0 block  (81)
	macro : K_MACRO id T_LPAR . formal_s0 rightparen attributes_0 block  (82)
	empty : .  (187)

	T_ID  shift 20
	T_RPAR  reduce 187

	empty  goto 123
	formal_s0  goto 124
	formal_s  goto 125
	formal  goto 126
	id  goto 127


state 70
	vcr : K_LOOP switch semicolon .  (21)

	.  reduce 21


state 71
	vcr : K_PALINDROME switch semicolon .  (20)

	.  reduce 20


state 72
	arithmetic : A_MINUS . expression  (135)

	A_MINUS  shift 72
	T_LPAR  shift 73
	T_LBRA  shift 74
	T_LSQB  shift 75
	T_INT  shift 34
	T_FLOAT  shift 76
	T_STRING  shift 77
	T_ID  shift 20
	.  error

	arithmetic  goto 81
	complex  goto 82
	constant  goto 83
	expression  goto 128
	float  goto 86
	id  goto 129
	int  goto 88
	list  goto 89
	quaternion  goto 90
	real  goto 91
	scalar  goto 92
	string  goto 93
	tensor  goto 94


state 73
	expression : T_LPAR . expression rightparen  (126)
	complex : T_LPAR . nint T_COMMA nint rightparen  (169)
	complex : T_LPAR . nint T_COMMA nfloat rightparen  (170)
	complex : T_LPAR . nfloat T_COMMA nint rightparen  (171)
	complex : T_LPAR . nfloat T_COMMA nfloat rightparen  (172)
	quaternion : T_LPAR . nint T_COMMA nint T_COMMA nint T_COMMA nint rightparen  (173)
	quaternion : T_LPAR . nfloat T_COMMA nfloat T_COMMA nfloat T_COMMA nfloat rightparen  (174)

	A_MINUS  shift 130
	T_LPAR  shift 73
	T_LBRA  shift 74
	T_LSQB  shift 75
	T_INT  shift 34
	T_FLOAT  shift 76
	T_STRING  shift 77
	T_ID  shift 20
	.  error

	arithmetic  goto 81
	complex  goto 82
	constant  goto 83
	expression  goto 131
	float  goto 132
	nfloat  goto 133
	id  goto 129
	int  goto 134
	nint  goto 135
	list  goto 89
	quaternion  goto 90
	real  goto 91
	scalar  goto 92
	string  goto 93
	tensor  goto 94


state 74
	list : T_LBRA . scalar_s rightbracket  (140)
	list : T_LBRA . tensor_s rightbracket  (141)
	list : T_LBRA . string_s rightbracket  (142)
	list : T_LBRA . nreal T_DOTDOT nreal rightbracket  (143)
	list : T_LBRA . nreal T_DOTDOT nreal T_COLON nreal rightbracket  (144)

	A_MINUS  shift 136
	T_LPAR  shift 137
	T_LSQB  shift 75
	T_INT  shift 34
	T_FLOAT  shift 76
	T_STRING  shift 77
	.  error

	complex  goto 82
	float  goto 86
	int  goto 88
	nreal  goto 138
	quaternion  goto 90
	real  goto 139
	scalar  goto 140
	scalar_s  goto 141
	string  goto 142
	string_s  goto 143
	tensor  goto 144
	tensor_s  goto 145


state 75
	tensor : T_LSQB . scalar_s T_RSQB  (151)
	tensor : T_LSQB . tensor_s T_RSQB  (152)

	A_MINUS  shift 146
	T_LPAR  shift 137
	T_LSQB  shift 75
	T_INT  shift 34
	T_FLOAT  shift 76
	.  error

	complex  goto 82
	float  goto 86
	int  goto 88
	quaternion  goto 90
	real  goto 91
	scalar  goto 140
	scalar_s  goto 147
	tensor  goto 144
	tensor_s  goto 148


state 76
	float : T_FLOAT .  (180)

	.  reduce 180


state 77
	string : T_STRING .  (181)

	.  reduce 181


state 78
	argument_s : argument .  (117)

	.  reduce 117


state 79
	argument_s0 : argument_s .  (116)
	argument_s : argument_s . T_COMMA argument  (118)

	T_COMMA  shift 149
	T_RPAR  reduce 116


state 80
	function_call : id T_LPAR argument_s0 . rightparen attributes_0  (114)

	T_RPAR  shift 150
	.  error

	rightparen  goto 151


state 81
	expression : arithmetic .  (127)

	.  reduce 127


state 82
	scalar : complex .  (163)

	.  reduce 163


state 83
	expression : constant .  (124)

	.  reduce 124


state 84
	argument_s0 : empty .  (115)

	.  reduce 115


state 85
	value : expression .  (121)
	arithmetic : expression . A_EXP expression  (128)
	arithmetic : expression . A_TIMES expression  (129)
	arithmetic : expression . A_DIV expression  (130)
	arithmetic : expression . A_IDIV expression  (131)
	arithmetic : expression . A_MOD expression  (132)
	arithmetic : expression . A_PLUS expression  (133)
	arithmetic : expression . A_MINUS expression  (134)

	A_PLUS  shift 152
	A_MINUS  shift 153
	A_TIMES  shift 154
	A_DIV  shift 155
	A_IDIV  shift 156
	A_MOD  shift 157
	A_EXP  shift 158
	T_RPAR  reduce 121
	T_COMMA  reduce 121


state 86
	real : float .  (168)

	.  reduce 168


state 87
	argument : id . T_ASSIGN value  (120)
	expression : id .  (125)

	T_ASSIGN  shift 159
	A_PLUS  reduce 125
	A_MINUS  reduce 125
	A_TIMES  reduce 125
	A_DIV  reduce 125
	A_IDIV  reduce 125
	A_MOD  reduce 125
	A_EXP  reduce 125
	T_RPAR  reduce 125
	T_COMMA  reduce 125


state 88
	real : int .  (167)

	.  reduce 167


state 89
	constant : list .  (138)

	.  reduce 138


state 90
	scalar : quaternion .  (164)

	.  reduce 164


state 91
	scalar : real .  (162)

	.  reduce 162


state 92
	constant : scalar .  (136)

	.  reduce 136


state 93
	constant : string .  (139)

	.  reduce 139


state 94
	constant : tensor .  (137)

	.  reduce 137


state 95
	argument : value .  (119)

	.  reduce 119


state 96
	attribute_s : attribute .  (111)

	.  reduce 111


state 97
	attribute_s0 : attribute_s .  (110)
	attribute_s : attribute_s . T_COMMA attribute  (112)

	T_COMMA  shift 160
	T_RSQB  reduce 110


state 98
	attributes : T_LSQB attribute_s0 . T_RSQB  (108)

	T_RSQB  shift 161
	.  error


state 99
	attribute_s0 : empty .  (109)

	.  reduce 109


state 100
	attribute : id . T_COLON constant  (113)

	T_COLON  shift 162
	.  error


state 101
	expression_s : expression .  (122)
	arithmetic : expression . A_EXP expression  (128)
	arithmetic : expression . A_TIMES expression  (129)
	arithmetic : expression . A_DIV expression  (130)
	arithmetic : expression . A_IDIV expression  (131)
	arithmetic : expression . A_MOD expression  (132)
	arithmetic : expression . A_PLUS expression  (133)
	arithmetic : expression . A_MINUS expression  (134)

	A_PLUS  shift 152
	A_MINUS  shift 153
	A_TIMES  shift 154
	A_DIV  shift 155
	A_IDIV  shift 156
	A_MOD  shift 157
	A_EXP  shift 158
	T_BAR  reduce 122
	T_COMMA  reduce 122
	T_SEMI  reduce 122


state 102
	s_assignment : id_s T_ASSIGN expression_s .  (101)
	expression_s : expression_s . T_COMMA expression  (123)

	T_COMMA  shift 163
	T_BAR  reduce 101
	T_SEMI  reduce 101


state 103
	f_assignment : id_s T_ASSIGN function_call .  (100)

	.  reduce 100


state 104
	function_call : id . T_LPAR argument_s0 rightparen attributes_0  (114)
	expression : id .  (125)

	T_LPAR  shift 56
	A_PLUS  reduce 125
	A_MINUS  reduce 125
	A_TIMES  reduce 125
	A_DIV  reduce 125
	A_IDIV  reduce 125
	A_MOD  reduce 125
	A_EXP  reduce 125
	T_COMMA  reduce 125
	T_SEMI  reduce 125


state 105
	id_s : id_s T_COMMA id . attributes_0  (191)
	empty : .  (187)

	T_LSQB  shift 57
	T_BAR  reduce 187
	T_RPAR  reduce 187
	T_ASSIGN  reduce 187
	T_COMMA  reduce 187

	attributes  goto 60
	attributes_0  goto 164
	empty  goto 62


state 106
	packet : T_BAR int T_BAR P_INTERRUPT . T_BAR int $$2 T_BAR interrupt_data T_BAR  (25)

	T_BAR  shift 165
	.  error


state 107
	packet : T_BAR int T_BAR P_SYSTEM . T_BAR int $$3 T_BAR system_data T_BAR  (27)

	T_BAR  shift 166
	.  error

